structmeta-tests/tests/compile_fail/struct_meta/expected_name_value_but_name_args.rs
#[structmeta_tests::attr_name_value(value(10))]
fn my_func() {}

fn main() {}
