structmeta-tests/tests/compile_fail/struct_meta/expected_name_value_but_name_args.stderr
error[E0433]: cannot find `attr_name_value` in `structmeta_tests`
 --> tests/compile_fail/struct_meta/expected_name_value_but_name_args.rs:1:21
  |
1 | #[structmeta_tests::attr_name_value(value(10))]
  |                     ^^^^^^^^^^^^^^^ could not find `attr_name_value` in `structmeta_tests`
